--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@ Thumbs.db*
 HELP.md
 .gradle
 build/
-idea/
 
 ### STS ###
 .apt_generated
@@ -44,3 +43,5 @@ out/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**
 !**/src/test/**
+/.idea/
+
